--- a/WindowsGame2/WindowsGame2/WindowsGame2/WindowsGame2.csproj
+++ b/WindowsGame2/WindowsGame2/WindowsGame2/WindowsGame2.csproj
@@ -193,6 +193,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Engine\Players\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
